# lacrei-saude-app

./: README.md
lacrei-backend/: README.md  pyproject.toml
lacrei-backend/backend/: cert.crt  cert.pem  db.sqlite3  key.pem  manage.py
lacrei-backend/backend/consulta/: models.py  serializers.py  urls.py  views.py
lacrei-backend/backend/consulta/migrations/: 0001_initial.py
lacrei-backend/backend/consulta/tests/: tests_models.py  tests_serializers.py
lacrei-backend/backend/core/: asgi.py  base_serializer.py  settings.py  urls.py  wsgi.py
lacrei-backend/backend/lacrei-core/: settings.py  urls.py  wsgi.py
lacrei-backend/backend/profissional/: models.py  serializers.py  urls.py  views.py
lacrei-backend/backend/profissional/migrations/: 0001_initial.py
lacrei-backend/backend/profissional/tests/: test_models.py  test_serializers.py
lacrei-frontend/: README.md  package-lock.json  package.json
lacrei-frontend/app/: globals.css  page.tsx
lacrei-frontend/app/cadastro-consulta/: ConsultaForm.tsx  page.tsx
lacrei-frontend/app/cadastro-profissional/: ProfissionalForm.tsx  page.tsx
lacrei-frontend/app/components/: ErrorModal.tsx  Footer.tsx  Header.tsx  SuccessModal.tsx
