[tool.poetry]
name = "lacrei-backend"
version = "0.1.0"
description = ""
authors = ["lucasoliveirabs <lucasoliveirabs95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.6.0"
pyopenssl = "^24.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
